# fx-dropcopy-primary-recon-daemon

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  benchmarks  cmake_install.cmake  fx_aeron_publisher  fx_exec_recond  fx_ingest_demo  integration_aeron_flow  integration_aeron_flow[1]_include.cmake  integration_reconciler_windowed  integration_reconciler_windowed[1]_include.cmake  unit_tests_gtest  unit_tests_gtest[1]_include.cmake
bench/: bench_main.cpp
cmake/: check_aeron_header.cpp
docs/: logging_audit.md
incidents/: README.md
incidents/INC-2025-EXAMPLE/: README.md  spec.json  whitelist.json
src/api/: aeron_publisher.cpp  demo_main.cpp  incident_runner.hpp  incident_runner_entry.cpp  incident_runner_main.cpp  main.cpp  recond_main.cpp  replay.cpp  replay.hpp  replay_engine.cpp  replay_engine.hpp  replay_main.cpp
src/core/: divergence.hpp  exec_event.hpp  gap_uncertainty.hpp  order_lifecycle.hpp  order_state.hpp  order_state_store.cpp  order_state_store.hpp  recon_config.hpp  recon_state.hpp  recon_timer.hpp  reconciler.cpp  reconciler.hpp  sequence_tracker.hpp  wire_exec_event.hpp
src/ingest/: aeron_client_view.hpp  aeron_subscriber.cpp  aeron_subscriber.hpp  fix_parser.cpp  fix_parser.hpp  spsc_ring.hpp
src/persist/: README.md  audit_diff.cpp  audit_diff.hpp  audit_log_format.hpp  audit_log_writer.cpp  audit_log_writer.hpp  capture_ring.hpp  endianness.hpp  file_sink.cpp  file_sink.hpp  incident_spec.cpp  incident_spec.hpp  wire_capture_writer.cpp  wire_capture_writer.hpp  wire_log_format.hpp  wire_log_reader.cpp  wire_log_reader.hpp  wire_log_scan.hpp
src/util/: arena.hpp  async_log.cpp  async_log.hpp  clock.hpp  crc32c.hpp  fixed_vec.hpp  hot_log.cpp  hot_log.hpp  log.hpp  rdtsc.hpp  soh.hpp  time.hpp  tsc_calibration.hpp  wheel_timer.hpp
tests/: aeron_subscriber_tests.cpp  all_tests.cpp  arena_tests.cpp  async_logger_tests.cpp  audit_diff_tests.cpp  audit_log_format_tests.cpp  audit_log_integration_tests.cpp  audit_log_writer_tests.cpp  divergence_tests.cpp  fix_parser_tests.cpp  fixed_vec_tests.cpp  from_wire_tests.cpp  hot_logger_tests.cpp  incident_runner_integration_test.cpp  order_lifecycle_tests.cpp  order_state_store_tests.cpp  order_state_tests.cpp  recon_config_tests.cpp  recon_determinism_tests.cpp  recon_state_tests.cpp  recon_timer_tests.cpp  reconciler_logic_tests.cpp  reconciler_sequence_tests.cpp  reconciler_two_stage_tests.cpp  replay_integration_tests.cpp  ring_tests.cpp  sequence_tracker_tests.cpp  test_main.hpp  wheel_timer_tests.cpp  wire_capture_writer_tests.cpp  wire_log_format_tests.cpp  wire_log_reader_tests.cpp
tests/e2e/: aeron_test_harness.cpp  aeron_test_harness.hpp  e2e_aeron_reconciler_tests.cpp
tests/harness/: README.md  scenario_builder.hpp  scenario_runner.hpp
tests/integration/: aeron_flow_test.cpp  docker-compose.it.yml  reconciler_windowed_tests.cpp  run_aeron_flow.sh
